# walkmap

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  justfile  spec.txt
.github/workflows/: pages.yml
config/: cities.yaml  feature_types.yaml
pipeline/: Cargo.toml
pipeline/src/: config.rs  dijkstra.rs  elevation.rs  graph.rs  grid.rs  group.rs  main.rs  mvt.rs  mvtbench.rs  osm.rs  output.rs  pmt.rs  polygonize.rs  snap.rs  tiles.rs  weights.rs
scripts/: rebuild.sh  release.sh
web/: app.js  index.html  style.css
web/data/: manifest.json
