[package]
name = "walkmap"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
osmpbf = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
rayon = "1"
tiff = "0.9"
kiddo = "4.2"
bincode = "1"
rustc-hash = "2"
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
